# cuVRender-A-CUDA-Accelerated-Volume-Rendering-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
.agent/: worklog.md
include/: camera.hpp  constant.hpp  cuda_utils.hpp  debug_utils.hpp  device_structs.hpp  gui.hpp  image_presenter.hpp  io.hpp  lights.hpp  ray.hpp  renderer_kernel.hpp  scene.hpp  transfer_function.hpp  volume.hpp  volume_renderer.hpp
scripts/: render_miranda_demo.sh
src/: camera.cu  cuda_utils.cu  debug_utils.cu  device_structs.cu  headless_main.cu  image_presenter.cpp  io.cu  lights.cu  main.cu  renderer_kernerl.cu  scene.cu  transfer_function.cu  volume.cu  volume_renderer.cu
